--- a/04-navigation.html
+++ b/04-navigation.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <title>Navigation</title>
+        <title>My applications</title>
     </head>
     <body>
+        <h1>My applications</h1>
         <ul>
             <li><a href="./begin.html">Begin</a></li>
             <li><a href="./02-htmlElements.html">Elements</a></li>
